--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Acuas - Drinking Water Website Template</title>
+    <title>DCA</title>
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
