--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="img/hero1.jpg" class="img-fluid w-100" alt="Image">
+                        <img src="img/hero3.png" class="img-fluid w-100" alt="Image">
                         <div class="carousel-caption-2">
                             <div class="carousel-caption-2-content" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
