--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="javascript:void(0);">Pages</a></li>
-                    <li class="breadcrumb-item active text-primary">About</li>
+                    <li class="breadcrumb-item active text-secondary">About</li>
                 </ol>
             </div>
         </div>
@@ -116,7 +116,7 @@
     <div class="container-fluid counter py-5">
         <div class="container py-5">
             <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                <h4 class="text-uppercase text-primary">Our Core Values</h4>
+                <h4 class="text-uppercase text-secondary">Our Core Values</h4>
                 <p class="b-3 text-white" style="font-size: larger;">These values guide our actions, define our culture, and ensure that we remain aligned with the expectations of our customers, partners, and the environment.</>
             </div>
             <div class="row g-5">
