--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-primary">Our Feature</h4>
+          <h4 class="text-uppercase text-secondary">Our Feature</h4>
           <h1 class="display-6 text-capitalize mb-3">
             Driven by Innovation, Backed by Excellence
           </h1>
@@ -242,12 +242,12 @@
                 alt=""
                 style="object-fit: cover"
               />
-              <div class="about-exp"><span>20 Years Experiance</span></div>
+              <div class="about-exp"><span>Industry Specialist</span></div>
             </div>
           </div>
           <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
             <div class="about-item">
-              <h4 class="text-primary text-uppercase">About Us</h4>
+              <h4 class="text-secondary text-uppercase">About Us</h4>
               <h3 class="display-6 mb-3">
                 Your Trusted Partner in Specialty Chemicals.
               </h3>
@@ -431,7 +431,7 @@
               <h4 class="text-white my-4">Years Experiance</h4>
               <div class="counter-counting">
                 <span class="text-white fs-2 fw-bold" data-toggle="counter-up"
-                  >17</span
+                  >5</span
                 >
                 <span class="h1 fw-bold text-white">+</span>
               </div>
@@ -450,7 +450,7 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-primary">Industries We Serve</h4>
+          <h4 class="text-uppercase text-secondary">Industries We Serve</h4>
           <h3 class="display-6 text-capitalize mb-3">
             Trusted Chemical Solutions for a Variety of Industries
           </h3>
@@ -565,7 +565,7 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-primary">Why Choose Us</h4>
+          <h4 class="text-uppercase text-secondary">Why Choose Us</h4>
           <h3 class="display-6 text-capitalize mb-3">
             Our Commitment to Quality, Service, and Partnerships
           </h3>
